--- a/composer.json
+++ b/composer.json
@@ -13,5 +13,16 @@
         "psr-4": {
             "App\\": "src/"
         }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "App\\Tests\\": "tests/"
+        }
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^8.4@dev"
+    },
+    "scripts": {
+        "test": "phpunit"
     }
 }
