--- a/config.ini
+++ b/config.ini
@@ -6,4 +6,6 @@ CASH_OUT_COMMISSION_FEE = 0.3
 CASH_OUT_LEGAL_MIN_COMMISSION_AMOUNT = .5
 CASH_OUT_LEGAL_MIN_COMMISSION_CURRENCY = EUR
 
+ROUND_UP_DECIMAL = 2;
+
 SUPPORTED_CURRENCY[] = "EUR"
